feat(lakehouse): distributed query execution across cluster nodes (Phase 1)
* feat(lakehouse): add distributed query execution across cluster nodes (Phase 1)

Introduces SQL-level distributed execution for Iceberg tables. The coordinator
node partitions files across eligible workers, dispatches queries via transport
actions, and merges partial results. All 41 ClickBench queries pass on a
3-node cluster with Q24 showing 1.31x speedup from parallel S3 reads.

Components added:
- DistributedScanExecutor: orchestrates partition → dispatch → merge
- FilePartitioner: greedy bin-packing by file size across workers
- WorkerQueryTransportAction: executes SQL fragments on worker nodes
- QueryAnalyzer: inspects Calcite RelNode for merge strategy selection
- ResultMerger: CONCAT, GLOBAL_MERGE, TOPK_MERGE strategies
- NodeDiscovery: finds eligible workers via node attributes
- RemoteQueryBackendHolder: cross-plugin backend discovery (avoids Guice issues)
- ExternalScanContext.preComputedResults: bypasses backend for merged results

Includes design document covering Phase 1-4 roadmap with architecture diagrams,
shuffle protocol, CBO design, and full ClickBench query execution matrix.

172 unit tests covering all new components.

* fix(lakehouse): use GENERIC executor for WorkerQueryTransportAction to prevent transport timeout

The default SAME executor caused DataFusion JNI queries to run on Netty I/O
threads, blocking them during cluster formation and causing transport response
drops on the first query after restart. Switching to ThreadPool.Names.GENERIC
ensures worker query execution runs on a dedicated thread pool.

* fix(lakehouse): resolve thread pool deadlock and optimize local dispatch

- LakehouseQueryTransportAction: use GENERIC executor instead of SAME
  (Netty I/O thread), preventing deadlock when future.get() blocks
- DistributedScanExecutor.dispatchLocal: bypass transport serialization
  for local node, execute directly on GENERIC thread pool
- WorkerQueryTransportAc